# internal/handlers/companies.go
@@ -17,6 +17,7 @@ import (
 // @ID create-company
 // @Accept json
 // @Produce json
+// @Param Authorization header string true "Строка авторизации"
 // @Param name body string true "Название компании (минимум 6 символов)"
 // @Param description body string true "Описание компании (минимум 12 символов)"
 // @Param photo_card body string true "Ссылка на фото компании (должна быть валидной URL)"
@@ -70,6 +71,7 @@ func (hs *handlerService) NewCompany(ctx *gin.Context) {
 // @ID accept-company
 // @Accept json
 // @Produce json
+// @Param Authorization header string true "Строка авторизации"
 // @Param companyId path string true "Уникальный идентификатор компании (в формате UUID)"
 // @Success 200 {object} models.Company
 // @Failure 400 {object} models.ErrorResponse
@@ -139,6 +141,7 @@ func (hs *handlerService) AcceptCompany(ctx *gin.Context) {
 // @ID get-company
 // @Accept json
 // @Produce json
+// @Param Authorization header string true "Строка авторизации"
 // @Param companyId path string true "Уникальный идентификатор компании (в формате UUID)"
 // @Success 200 {object} models.Company
 // @Failure 400 {object} models.ErrorResponse
@@ -196,9 +199,10 @@ func (hs *handlerService) GetCompany(ctx *gin.Context) {
 // @ID get-my-companies
 // @Accept json
 // @Produce json
+// @Param Authorization header string true "Строка авторизации"
 // @Success 200 {object} []models.Company
 // @Failure 500 {object} models.ErrorResponse
-// @Router /companies/mine [get]
+// @Router /companies/my [get]
 func (hs *handlerService) GetMyCompanies(ctx *gin.Context) {
 	vkParams := hs.GetVKParams(ctx)
 
@@ -222,6 +226,7 @@ func (hs *handlerService) GetMyCompanies(ctx *gin.Context) {
 // @ID get-all-companies
 // @Accept json
 // @Produce json
+// @Param Authorization header string true "Строка авторизации"
 // @Success 200 {object} []models.Company
 // @Failure 500 {object} models.ErrorResponse
 // @Router /companies [get]
